flowise/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowise
  namespace: flowise
  labels:
    app: flowise
spec:
  selector:
    matchLabels:
      app: flowise
  replicas: 1
  template:
    metadata:
      labels:
        app: flowise
    spec:
      containers:
      - name: flowise
        image: flowiseai/flowise:3.0.2
        imagePullPolicy: Always
        resources: 
          requests:
            cpu: "100m"
            memory: "512Mi"
          limits:
            cpu: "2"
            memory: "512Mi"
